crates/vite_task_plan/tests/plan_snapshots/fixtures/script-hooks-nested-run/snapshots/query - prescriptInHook runs when scriptInHook is called from a hook.snap
---
source: crates/vite_task_plan/tests/plan_snapshots/main.rs
expression: "&plan_json"
info:
  args:
    - run
    - test
input_file: crates/vite_task_plan/tests/plan_snapshots/fixtures/script-hooks-nested-run
---
{
  "graph": [
    {
      "key": [
        "<workspace>/",
        "test"
      ],
      "node": {
        "task_display": {
          "package_name": "@test/script-hooks-nested-run",
          "task_name": "test",
          "package_path": "<workspace>/"
        },
        "items": [
          {
            "execution_item_display": {
              "task_display": {
                "package_name": "@test/script-hooks-nested-run",
                "task_name": "pretest",
                "package_path": "<workspace>/"
              },
              "command": "vt run scriptInHook",
              "and_item_index": null,
              "cwd": "<workspace>/"
            },
            "kind": {
              "Expanded": {
                "graph": [
                  {
                    "key": [
                      "<workspace>/",
                      "scriptInHook"
                    ],
                    "node": {
                      "task_display": {
                        "package_name": "@test/script-hooks-nested-run",
                        "task_name": "scriptInHook",
                        "package_path": "<workspace>/"
                      },
                      "items": [
                        {
                          "execution_item_display": {
                            "task_display": {
                              "package_name": "@test/script-hooks-nested-run",
                              "task_name": "prescriptInHook",
                              "package_path": "<workspace>/"
                            },
                            "command": "echo prescriptInHook",
                            "and_item_index": null,
                            "cwd": "<workspace>/"
                          },
                          "kind": {
                            "Leaf": {
                              "InProcess": {
                                "kind": {
                                  "Echo": {
                                    "strings": [
                                      "prescriptInHook"
                                    ],
                                    "trailing_newline": true
                                  }
                                }
                              }
                            }
                          }
                        },
                        {
                          "execution_item_display": {
                            "task_display": {
                              "package_name": "@test/script-hooks-nested-run",
                              "task_name": "scriptInHook",
                              "package_path": "<workspace>/"
                            },
                            "command": "echo scriptInHook",
                            "and_item_index": null,
                            "cwd": "<workspace>/"
                          },
                          "kind": {
                            "Leaf": {
                              "InProcess": {
                                "kind": {
                                  "Echo": {
                                    "strings": [
                                      "scriptInHook"
                                    ],
                                    "trailing_newline": true
                                  }
                                }
                              }
                            }
                          }
                        }
                      ]
                    },
                    "neighbors": []
                  }
                ],
                "concurrency_limit": 10
              }
            }
          },
          {
            "execution_item_display": {
              "task_display": {
                "package_name": "@test/script-hooks-nested-run",
                "task_name": "test",
                "package_path": "<workspace>/"
              },
              "command": "echo test",
              "and_item_index": null,
              "cwd": "<workspace>/"
            },
            "kind": {
              "Leaf": {
                "InProcess": {
                  "kind": {
                    "Echo": {
                      "strings": [
                        "test"
                      ],
                      "trailing_newline": true
                    }
                  }
                }
              }
            }
          }
        ]
      },
      "neighbors": []
    }
  ],
  "concurrency_limit": 10
}
