crates/vite_task_plan/tests/plan_snapshots/fixtures/script-hooks-nested-run/snapshots/task graph.snap
---
source: crates/vite_task_plan/tests/plan_snapshots/main.rs
expression: task_graph_json
input_file: crates/vite_task_plan/tests/plan_snapshots/fixtures/script-hooks-nested-run
---
[
  {
    "key": [
      "<workspace>/",
      "prescriptInHook"
    ],
    "node": {
      "task_display": {
        "package_name": "@test/script-hooks-nested-run",
        "task_name": "prescriptInHook",
        "package_path": "<workspace>/"
      },
      "resolved_config": {
        "command": "echo prescriptInHook",
        "resolved_options": {
          "cwd": "<workspace>/",
          "cache_config": {
            "env_config": {
              "fingerprinted_envs": [],
              "untracked_env": [
                "<default untracked envs>"
              ]
            },
            "input_config": {
              "includes_auto": true,
              "positive_globs": [],
              "negative_globs": []
            },
            "output_globs": []
          }
        }
      },
      "source": "PackageJsonScript"
    },
    "neighbors": []
  },
  {
    "key": [
      "<workspace>/",
      "pretest"
    ],
    "node": {
      "task_display": {
        "package_name": "@test/script-hooks-nested-run",
        "task_name": "pretest",
        "package_path": "<workspace>/"
      },
      "resolved_config": {
        "command": "vt run scriptInHook",
        "resolved_options": {
          "cwd": "<workspace>/",
          "cache_config": {
            "env_config": {
              "fingerprinted_envs": [],
              "untracked_env": [
                "<default untracked envs>"
              ]
            },
            "input_config": {
              "includes_auto": true,
              "positive_globs": [],
              "negative_globs": []
            },
            "output_globs": []
          }
        }
      },
      "source": "PackageJsonScript"
    },
    "neighbors": []
  },
  {
    "key": [
      "<workspace>/",
      "scriptInHook"
    ],
    "node": {
      "task_display": {
        "package_name": "@test/script-hooks-nested-run",
        "task_name": "scriptInHook",
        "package_path": "<workspace>/"
      },
      "resolved_config": {
        "command": "echo scriptInHook",
        "resolved_options": {
          "cwd": "<workspace>/",
          "cache_config": {
            "env_config": {
              "fingerprinted_envs": [],
              "untracked_env": [
                "<default untracked envs>"
              ]
            },
            "input_config": {
              "includes_auto": true,
              "positive_globs": [],
              "negative_globs": []
            },
            "output_globs": []
          }
        }
      },
      "source": "PackageJsonScript"
    },
    "neighbors": []
  },
  {
    "key": [
      "<workspace>/",
      "test"
    ],
    "node": {
      "task_display": {
        "package_name": "@test/script-hooks-nested-run",
        "task_name": "test",
        "package_path": "<workspace>/"
      },
      "resolved_config": {
        "command": "echo test",
        "resolved_options": {
          "cwd": "<workspace>/",
          "cache_config": {
            "env_config": {
              "fingerprinted_envs": [],
              "untracked_env": [
                "<default untracked envs>"
              ]
            },
            "input_config": {
              "includes_auto": true,
              "positive_globs": [],
              "negative_globs": []
            },
            "output_globs": []
          }
        }
      },
      "source": "PackageJsonScript"
    },
    "neighbors": []
  }
]
